--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -33,7 +33,7 @@
               </div>
               <div class="frame-3" id="studentlogginclose"></div>
             </div>
-            <form class="item" id="login-form" method="POST" action="Login.php">
+            <form class="item" id="login-form" method="POST" action="/Frontend/studentdash.html">
               <div class="input-field">
                 <div class="text-wrapper-3">Email/Username:</div>
                 <div class="input">
@@ -66,7 +66,7 @@
               </div>
               <div class="frame-3" id="teacherlogclose"></div>
             </div>
-            <form class="item" id="register-form" method="POST" action="Register.php">
+            <form class="item" id="register-form" method="POST" action="/Frontend/tutor-dashboard.html">
               <div class="input-field">
                 <div class="text-wrapper-3">Email/Username:</div>
                 <div class="input">
